<resources>
    <string name="app_name">BidIT</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Home</string>
    <string name="domestic">Domestic</string>
    <string name="garden">Garden</string>
    <string name="renovation">Renovation</string>
    <string name="clothes">Clothes</string>
    <string name="jewelry">Jewelry</string>
    <string name="cars">Cars</string>
    <string name="my_account">My Account</string>
    <string name="reserved">Reserved Items</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add Item</string>
    <string name="my_bids">My Bids</string>
    <string name="my_wins">My Wins</string>
    <string name="cart">Cart</string>
    <string name="refresh">Refresh</string>
    <string name="text">Night Mode</string>
    <string name="mode">Light Mode</string>
</resources>